# adoc-parser

./: .gitignore  .gitmodules  CLAUDE.md  COMPAT-DIFF.md  Cargo.toml  FEATURES.md  LICENSE  README.md  TODO.md
adoc-compat-tests/: Cargo.toml
adoc-compat-tests/src/: asg.rs  builder.rs  lib.rs
adoc-compat-tests/tests/: parsing_lab.rs
adoc-html-tests/: Cargo.toml
adoc-html-tests/fixtures/block/: admonition-all.adoc  admonition-all.expected.html  attrlist-id-role.adoc  attrlist-id-role.expected.html  block-title.adoc  block-title.expected.html  callout-guard-icons-font.adoc  callout-guard-icons-font.expected.html  callout-guard-text-icons.adoc  callout-guard-text-icons.expected.html  callout-list.adoc  callout-list.expected.html  checklist.adoc  checklist.expected.html  collapsible.adoc  collapsible.expected.html  delimited-example.expected.html  delimited-listing.adoc  delimited-listing.expected.html  delimited-nested.adoc  delimited-nested.expected.html  delimited-quote.adoc  delimited-quote.expected.html  delimited-sidebar.adoc  delimited-sidebar.expected.html  delimited-source.adoc  delimited-source.expected.html  discrete-heading.adoc  discrete-heading.expected.html  dlist-edges.adoc  dlist-edges.expected.html  dlist-horizontal.adoc  dlist-horizontal.expected.html  dlist-indented-description.adoc  dlist-indented-description.expected.html  image-alt.adoc  (+62 more)
adoc-html-tests/scripts/: generate-expected.sh
adoc-html-tests/src/: normalize.rs
adoc-html-tests/tests/: author_rendering.rs  html_compat.rs
adoc-wasm/: Cargo.toml
adoc-wasm/src/: lib.rs
(+108 files in other folders)
