[package]
name = "adoc-html-tests"
version = "0.1.0"
edition = "2024"
publish = false
description = "HTML compatibility tests comparing adoc-html output against Asciidoctor reference HTML."
license.workspace = true
repository.workspace = true

[dependencies]
adoc-html = { path = "../adoc-html" }
ego-tree = "0.10"
scraper = "0.22"
similar = "2.7"
